<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    >

    <ImageButton
        android:id="@+id/new_exercise_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/new_exercise_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_exercise_image"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/exercise_title"
        android:maxLines="1" />

    <EditText
        android:id="@+id/new_exercise_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_exercise_title"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/description_exercise"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:scrollHorizontally="false" />

    <EditText
        android:id="@+id/new_exercise_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_exercise_body"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/sets"
        android:inputType="number"
        android:maxLines="1"
        android:scrollHorizontally="false" />

    <EditText
        android:id="@+id/new_exercise_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_exercise_sets"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="5dp"
        android:hint="@string/reps"
        android:inputType="number"
        android:maxLines="1"
        android:scrollHorizontally="false" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_new_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="40dp"
        android:src="@drawable/ic_navigation_check_24"
        app:backgroundTint="#4EB2F4" />
    <com.theartofdev.edmodo.cropper.CropImageView
        xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</RelativeLayout>