<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:background="@drawable/layout_shape"
        android:gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:gravity="center"
            android:text="@string/edit_message"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_input" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/age_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/age"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="161dp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/hr_edit"
                        android:layout_width="176dp"
                        android:layout_height="wrap_content"
                        android:hint="BPM"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/hr_editButton"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    android:text="Record BPM"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="161dp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/bp_edit"
                        android:layout_width="176dp"
                        android:layout_height="wrap_content"
                        android:hint="mm HG"
                        android:inputType="number" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/bp_editButton"
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    android:text="Record BP"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="15dp"
            android:background="#c0c0c0" />

        <Button
            android:id="@+id/editHomePage_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/confirm" />

    </LinearLayout>
</LinearLayout>